native/sentinel.h

// ---- cancellable / long-running ops (return task id) ----
//
extern long long int MoveSmoothStart(int x, int y, long long int port);
extern long long int DragSmoothStart(int x, int y, long long int port);
extern long long int ScrollSmoothStart(int x, int y, long long int port);
extern void TypeStr(char* text, long long int port);
// allows calling robotgo.TypeStr(s, int1, int2) (some usages pass additional ints)
//
extern void TypeStrWithInts(char* text, int arg1, int arg2, long long int port);
extern void GoSleep(int seconds, long long int port);
extern void SetKeySleep(int ms, long long int port);
// mods: comma separated modifiers string like "alt,cmd" or NULL for none
//
extern void KeyTap(char* key, char* mods, long long int port);
extern void KeyTapArr(char* key, char* modsJson, long long int port);
// direction: NULL for default, or "up" / "down"
//
extern void KeyToggle(char* key, char* direction, long long int port);
extern void WriteAll(char* text, long long int port);
extern void ReadAll(long long int port);
extern long long int TypeStrStart(char* text, long long int port);
extern void GetPixelColor(int x, int y, long long int port);
extern void GetScreenSize(long long int port);
extern void CaptureScreenSave(int x, int y, int w, int h, char* path, long long int port);
// returns a base64-encoded PNG of the captured region in the "data" response field.
//
extern void CaptureScreenBase64(int x, int y, int w, int h, long long int port);
extern void DisplaysNum(long long int port);
extern void GetDisplayBounds(int index, long long int port);
// capture entire display specified by index and save to given path (if path NULL, create temp file)
//
extern void CaptureDisplaySave(int index, char* path, long long int port);
// capture specific region on current display (or after setting DisplayID) and save
//
extern void CaptureDisplayRegionSave(int index, int x, int y, int w, int h, char* path, long long int port);
// save an image.Image (captured via CaptureImg) to jpeg with quality (0-100).
// Here we accept path and quality; we capture entire display at robotgo.DisplayID.
//
extern void SaveImageJpeg(char* path, int quality, long long int port);
// capture current display and save PNG to path
//
extern void SaveImagePNGFromCaptureImg(char* path, long long int port);
// capture a region and save the raw bitmap to a file using bitmap.Save.
// If path is NULL or empty a temp filename is created (returned).
//
extern void CaptureScreenBitmapSave(int x, int y, int w, int h, char* path, long long int port);
// capture region -> convert -> search on screen -> return found coords {x,y}
// This uses the same approach as your example: capture -> ToImage -> ImgToBitmap -> ToCBitmap -> bitmap.Find
//
extern void FindBitmapFromCapture(int x, int y, int w, int h, long long int port);
// capture region -> convert -> find all occurrences on screen -> return array of points
//
extern void FindAllBitmapFromCapture(int x, int y, int w, int h, long long int port);
extern void MoveToFoundBitmap(int x, int y, int w, int h, long long int port);
// Save a captured region to a file (PNG). This uses robotgo.ToImage + robotgo.Save (or bitmap.Save).
//
extern void SaveBitmapToFile(int x, int y, int w, int h, char* path, long long int port);