lib/bindings/generated_bindings.dart


  late final _MoveSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('MoveSmoothStart');
  late final _MoveSmoothStart =
      _MoveSmoothStartPtr.asFunction<int Function(int, int, int)>();

  int DragSmoothStart(int x, int y, int port) {
    return _DragSmoothStart(x, y, port);
  }

  late final _DragSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('DragSmoothStart');
  late final _DragSmoothStart =
      _DragSmoothStartPtr.asFunction<int Function(int, int, int)>();

  int ScrollSmoothStart(int x, int y, int port) {
    return _ScrollSmoothStart(x, y, port);
  }

  late final _ScrollSmoothStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('ScrollSmoothStart');
  late final _ScrollSmoothStart =
      _ScrollSmoothStartPtr.asFunction<int Function(int, int, int)>();

  void TypeStr(ffi.Pointer<ffi.Char> text, int port) {
    return _TypeStr(text, port);
  }

  late final _TypeStrPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('TypeStr');
  late final _TypeStr =
      _TypeStrPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void TypeStrWithInts(
    ffi.Pointer<ffi.Char> text,
    int arg1,
    int arg2,
    int port,
  ) {
    return _TypeStrWithInts(text, arg1, arg2, port);
  }

  late final _TypeStrWithIntsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.LongLong,
          )
        >
      >('TypeStrWithInts');
  late final _TypeStrWithInts =
      _TypeStrWithIntsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int, int)
      >();

  void GoSleep(int seconds, int port) {
    return _GoSleep(seconds, port);
  }

  late final _GoSleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'GoSleep',
      );
  late final _GoSleep = _GoSleepPtr.asFunction<void Function(int, int)>();

  void SetKeySleep(int ms, int port) {
    return _SetKeySleep(ms, port);
  }

  late final _SetKeySleepPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'SetKeySleep',
      );
  late final _SetKeySleep =
      _SetKeySleepPtr.asFunction<void Function(int, int)>();

  void KeyTap(ffi.Pointer<ffi.Char> key, ffi.Pointer<ffi.Char> mods, int port) {
    return _KeyTap(key, mods, port);
  }

  late final _KeyTapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyTap');
  late final _KeyTap =
      _KeyTapPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void KeyTapArr(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> modsJson,
    int port,
  ) {
    return _KeyTapArr(key, modsJson, port);
  }

  late final _KeyTapArrPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyTapArr');
  late final _KeyTapArr =
      _KeyTapArrPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void KeyToggle(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> direction,
    int port,
  ) {
    return _KeyToggle(key, direction, port);
  }

  late final _KeyTogglePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('KeyToggle');
  late final _KeyToggle =
      _KeyTogglePtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)
      >();

  void WriteAll(ffi.Pointer<ffi.Char> text, int port) {
    return _WriteAll(text, port);
  }

  late final _WriteAllPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('WriteAll');
  late final _WriteAll =
      _WriteAllPtr.asFunction<void Function(ffi.Pointer<ffi.Char>, int)>();

  void ReadAll(int port) {
    return _ReadAll(port);
  }

  late final _ReadAllPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>('ReadAll');
  late final _ReadAll = _ReadAllPtr.asFunction<void Function(int)>();

  int TypeStrStart(ffi.Pointer<ffi.Char> text, int port) {
    return _TypeStrStart(text, port);
  }

  late final _TypeStrStartPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('TypeStrStart');
  late final _TypeStrStart =
      _TypeStrStartPtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  void GetPixelColor(int x, int y, int port) {
    return _GetPixelColor(x, y, port);
  }

  late final _GetPixelColorPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.LongLong)>
      >('GetPixelColor');
  late final _GetPixelColor =
      _GetPixelColorPtr.asFunction<void Function(int, int, int)>();

  void GetScreenSize(int port) {
    return _GetScreenSize(port);
  }

  late final _GetScreenSizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'GetScreenSize',
      );
  late final _GetScreenSize =
      _GetScreenSizePtr.asFunction<void Function(int)>();

  void CaptureScreenSave(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureScreenSave(x, y, w, h, path, port);
  }

  late final _CaptureScreenSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureScreenSave');
  late final _CaptureScreenSave =
      _CaptureScreenSavePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureScreenBase64(int x, int y, int w, int h, int port) {
    return _CaptureScreenBase64(x, y, w, h, port);
  }

  late final _CaptureScreenBase64Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('CaptureScreenBase64');
  late final _CaptureScreenBase64 =
      _CaptureScreenBase64Ptr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void DisplaysNum(int port) {
    return _DisplaysNum(port);
  }

  late final _DisplaysNumPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'DisplaysNum',
      );
  late final _DisplaysNum = _DisplaysNumPtr.asFunction<void Function(int)>();

  void GetDisplayBounds(int index, int port) {
    return _GetDisplayBounds(index, port);
  }

  late final _GetDisplayBoundsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.LongLong)>>(
        'GetDisplayBounds',
      );
  late final _GetDisplayBounds =
      _GetDisplayBoundsPtr.asFunction<void Function(int, int)>();

  void CaptureDisplaySave(int index, ffi.Pointer<ffi.Char> path, int port) {
    return _CaptureDisplaySave(index, path, port);
  }

  late final _CaptureDisplaySavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('CaptureDisplaySave');
  late final _CaptureDisplaySave =
      _CaptureDisplaySavePtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureDisplayRegionSave(
    int index,
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureDisplayRegionSave(index, x, y, w, h, path, port);
  }

  late final _CaptureDisplayRegionSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureDisplayRegionSave');
  late final _CaptureDisplayRegionSave =
      _CaptureDisplayRegionSavePtr.asFunction<
        void Function(int, int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void SaveImageJpeg(ffi.Pointer<ffi.Char> path, int quality, int port) {
    return _SaveImageJpeg(path, quality, port);
  }

  late final _SaveImageJpegPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.LongLong)
        >
      >('SaveImageJpeg');
  late final _SaveImageJpeg =
      _SaveImageJpegPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  void SaveImagePNGFromCaptureImg(ffi.Pointer<ffi.Char> path, int port) {
    return _SaveImagePNGFromCaptureImg(path, port);
  }

  late final _SaveImagePNGFromCaptureImgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.LongLong)
        >
      >('SaveImagePNGFromCaptureImg');
  late final _SaveImagePNGFromCaptureImg =
      _SaveImagePNGFromCaptureImgPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, int)
      >();

  void CaptureScreenBitmapSave(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _CaptureScreenBitmapSave(x, y, w, h, path, port);
  }

  late final _CaptureScreenBitmapSavePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CaptureScreenBitmapSave');
  late final _CaptureScreenBitmapSave =
      _CaptureScreenBitmapSavePtr.asFunction<
        void Function(int, int, int, int, ffi.Pointer<ffi.Char>, int)
      >();

  void FindBitmapFromCapture(int x, int y, int w, int h, int port) {
    return _FindBitmapFromCapture(x, y, w, h, port);
  }

  late final _FindBitmapFromCapturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('FindBitmapFromCapture');
  late final _FindBitmapFromCapture =
      _FindBitmapFromCapturePtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void FindAllBitmapFromCapture(int x, int y, int w, int h, int port) {
    return _FindAllBitmapFromCapture(x, y, w, h, port);
  }

  late final _FindAllBitmapFromCapturePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('FindAllBitmapFromCapture');
  late final _FindAllBitmapFromCapture =
      _FindAllBitmapFromCapturePtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void MoveToFoundBitmap(int x, int y, int w, int h, int port) {
    return _MoveToFoundBitmap(x, y, w, h, port);
  }

  late final _MoveToFoundBitmapPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int, ffi.LongLong)
        >
      >('MoveToFoundBitmap');
  late final _MoveToFoundBitmap =
      _MoveToFoundBitmapPtr.asFunction<
        void Function(int, int, int, int, int)
      >();

  void SaveBitmapToFile(
    int x,
    int y,
    int w,
    int h,
    ffi.Pointer<ffi.Char> path,
    int port,
  ) {
    return _SaveBitmapToFile(x, y, w, h, path, port);
  }
